src/app/+previous-matches/previous-match/previous-match.component.scss
@import '../../../assets/_variables.scss';

.flex-container {
  background: $first-layer-background;

  display: flex;
  flex-direction: column;
  align-items: center;
  flex-wrap: wrap;

  padding-top: 10px;
  margin-bottom: 10px;
  margin-left: 5px;
  margin-right: 5px;

  width: 520px;
  height: 820px;
}

.container {
  display: flex;
  align-items: center;
  width: 480px;
  height: 30px;
}

.content {
  display: flex;
  flex-direction: row;

  background: none;
}

.team {
  text-align: center;
  width: 240px;
  border-bottom: 1px solid $third-layer-background;

  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.vs {
  font-size: .8rem;
  line-height: 20px;
}

.active {
  border-bottom: 1px solid $radiant-color;
}

.inactive {
  opacity: .5;
}

